fixed linebreak in the how to buy section

--- a/src/app/components/landing/tutorial/tutorial.component.scss
+++ b/src/app/components/landing/tutorial/tutorial.component.scss
@@ -127,7 +127,10 @@ section.tutorial {
 
       > .description {
         line-height: 30px;
-        line-break: anywhere;
+
+        > span {
+          line-break: anywhere;
+        }
       }
     }
   }
